--- a/whiteboard/whiteboard-Info.plist
+++ b/whiteboard/whiteboard-Info.plist
@@ -37,6 +37,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UserImplementation</key>
-	<string>MyUser</string>
+	<string>ZUser</string>
 </dict>
 </plist>
