Creates WBDatasource and Parse implementation with tests.

--- a/whiteboard/whiteboard-Info.plist
+++ b/whiteboard/whiteboard-Info.plist
@@ -38,5 +38,7 @@
 	</array>
 	<key>UserImplementation</key>
 	<string>ZUser</string>
+	<key>DataSourceImplementation</key>
+	<string>ParseDataSource</string>
 </dict>
 </plist>
