Now uses ParseUser which is a PFUser and complies to the <WBUser> protocol.

--- a/whiteboard/whiteboard-Info.plist
+++ b/whiteboard/whiteboard-Info.plist
@@ -37,7 +37,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UserImplementation</key>
-	<string>ZUser</string>
+	<string>ParseUser</string>
 	<key>DataSourceImplementation</key>
 	<string>ParseDataSource</string>
 </dict>
