Added tab bar fonts to plist and updated UIColor+Hex to take an optional alpha.

--- a/whiteboard/WBTheme.plist
+++ b/whiteboard/WBTheme.plist
@@ -2,13 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>tabBarTextColor-Selected</key>
+	<string>#816345</string>
 	<key>tabBarTextColor-Normal</key>
-	<dict>
-		<key>color</key>
-		<string>#56372A</string>
-		<key>alpha</key>
-		<real>1</real>
-	</dict>
+	<string>#56372a</string>
 	<key>tabBarCameraButtonImage-Selected</key>
 	<string>buttonCameraSelected</string>
 	<key>tabBarCameraButtonImage-Normal</key>
