--- a/whiteboard/WBTheme.plist
+++ b/whiteboard/WBTheme.plist
@@ -32,16 +32,20 @@
 	<string>iconComment</string>
 	<key>SECTION_commentButtonFont</key>
 	<string>Helvetica-Bold</string>
-	<key>SECTION_commentButtonColor</key>
-	<string></string>
+	<key>SECTION_commentButtonFontColor</key>
+	<string>#493723</string>
+	<key>SECTION_commentButtonFontSize</key>
+	<string>11</string>
 	<key>SECTION_likeButtonImage-Selected</key>
 	<string>buttonLikeSelected</string>
 	<key>SECTION_likeButtonImage-Normal</key>
 	<string>buttonLike</string>
 	<key>SECTION_likeButtonFont</key>
 	<string>Helvetica-Bold</string>
-	<key>SECTION_likeButtonColor</key>
-	<string></string>
+	<key>SECTION_likeButtonFontColor</key>
+	<string>#493723</string>
+	<key>SECTION_likeButtonFontSize</key>
+	<string>11</string>
 	<key>SECTION_displayNameFont</key>
 	<string>Helvetica-Bold</string>
 	<key>SECTION_displayNameFontSize</key>
