--- a/whiteboard/WBTheme.plist
+++ b/whiteboard/WBTheme.plist
@@ -58,6 +58,12 @@
 	<string>#7c7c7c</string>
 	<key>SECTION_dateFontSize</key>
 	<string>11</string>
+	<key>FEED_loadMoreSeperatorTopImage</key>
+	<string>separatorTimeline</string>
+	<key>FEED_loadMoreImage</key>
+	<string>CellLoadMore</string>
+	<key>New item</key>
+	<string></string>
 	<key>backgroundImage</key>
 	<string>backgroundLeather</string>
 </dict>
