--- a/whiteboard/WBTheme.plist
+++ b/whiteboard/WBTheme.plist
@@ -134,5 +134,11 @@
 	<string>buttonFollowing</string>
 	<key>FINDFRIENDS_followButtonSelectedImage</key>
 	<string>iconTick</string>
+	<key>FINDFRIENDS_inviteFriendsFont</key>
+	<string>Helvetica-Bold</string>
+	<key>FINDFRIENDS_inviteFriendsFontSize</key>
+	<string>18</string>
+	<key>FINDFRIENDS_inviteFriendsFontColor</key>
+	<string>#422B22</string>
 </dict>
 </plist>
