Adds push notification sender + setup to receive them.

--- a/whiteboard/whiteboard-Info.plist
+++ b/whiteboard/whiteboard-Info.plist
@@ -4,26 +4,6 @@
 <dict>
 	<key>AccountImplementation</key>
 	<string>WBParseAccountManager</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb1412425025643430</string>
-			</array>
-		</dict>
-	</array>
-	<key>LSApplicationCategoryType</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string></string>
-		</dict>
-	</array>
-	<key>FacebookDisplayName</key>
-	<string>Whiteboard</string>
-	<key>FacebookAppID</key>
-	<string>1412425025643430</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -31,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.fueled.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.fueled.whiteboard.Whiteboard</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -42,10 +22,30 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1412425025643430</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>DataSourceImplementation</key>
 	<string>WBParseDataSource</string>
+	<key>FacebookAppID</key>
+	<string>1412425025643430</string>
+	<key>FacebookDisplayName</key>
+	<string>Whiteboard</string>
+	<key>LSApplicationCategoryType</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string></string>
+		</dict>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
